--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ discus_identifier: mr-brown # add your discus identifier.  Not your username.  T
 
 # Newsletter
 mailchimp: # add your MailChimp form identifier. For example - blogenjoyfreedom.us16.list-manage.com/subscribe/post?u=cd56155d76ddeeb4c0bc4d080&amp;id=7a526cd13e
-
+source: app
 # Tracker
 analytics:
 
