added linkedin and github social links

--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,8 @@ instagram_url: # add url link
 pinterest_url: # add url link
 dribbble_url:  # add url link
 facebook_url:  # add url link
+linkedin_url: https://www.linkedin.com/in/nyah-way/
+github_url: https://github.com/NyW8
 
 # Disqus
 discus_identifier: mr-brown # add your discus identifier.  Not your username.  To get this, register your forum here with a unique ID: https://disqus.com/admin/create/
