--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,9 @@
 logo: # add logo name
-title: Nyah Way
+title: Bef - Enjoy Freedom
 description: > # this means to ignore newlines until "baseurl:"
-  Nyah is a computer science student at the University of Toronto Scarborough. She is currently pursuing an Undergraduate degree in computer science entrepreneurship. This site hosts some of her projects.
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
 permalink: ':title/'
 baseurl: "/bef" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
@@ -12,12 +14,12 @@ banner-title: # add banner title
 banner-desc: # add banner description
 
 # Author settings
-author-pic: nyah.png # your photo
-author-name: Nyah Way # your name
-about-author: Honours computer science specialist student in the entrepreneurship stream at the University of Toronto Scarborough. # about author
-email: n.way@mail.utoronto.ca # your email
-phone: N/A # your pnone number
-website: https://nyw8.github.io # you website
+author-pic: face.jpg # your photo
+author-name: # your name
+about-author: # about author
+email: your-email@domain.com # your email
+phone: (496)-169-6557 # your pnone number
+website: https://dwayne.example.com # you website
 
 # Social link
 google_url:    # add url link
@@ -46,7 +48,7 @@ plugins_dir:
   - jekyll-paginate
   - jekyll-sitemap
 
-plugins:
+gems:
   - jekyll-paginate
   - jekyll-sitemap
 
