Edited social, about, contact and layouts

--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,14 @@ url: https://nyw8.github.io # the base hostname & protocol for your site, e.g. h
 
 # Banner settings
 video: mountains.mp4 # add banner video. Add your video file to the folder video
-banner-title: # add banner title
-banner-desc: # add banner description
+banner-title: BE LIMITLESS # add banner title
+banner-desc: And still, I rise. - Maya Angelou
+#You cannot get through a single day without having an impact on the world around you. 
+#What you do makes a difference, and you have to decide what kind of difference you want to make. - Jane Goodall # add banner description
+#And still, I rise. - Maya Angelou
+#Hakuna Matata
+#Be limitless
+#Follow your own stars
 
 # Author settings
 author-pic: nyah.png # your photo
@@ -26,6 +32,8 @@ instagram_url: # add url link
 pinterest_url: # add url link
 dribbble_url:  # add url link
 facebook_url:  # add url link
+linkedin_url: https://www.linkedin.com/in/nyah-way/
+github_url:   https://github.com/NyW8
 
 # Disqus
 discus_identifier: mr-brown # add your discus identifier.  Not your username.  To get this, register your forum here with a unique ID: https://disqus.com/admin/create/
