--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-logo: # add logo name
+logo:  # add logo name
 title: Nyah Way
 description: > # this means to ignore newlines until "baseurl:"
   Nyah is a computer science student at the University of Toronto Scarborough. She is currently pursuing an Undergraduate degree in computer science entrepreneurship. This site hosts some of her projects.
@@ -36,7 +36,7 @@ linkedin_url: https://www.linkedin.com/in/nyah-way/
 github_url:   https://github.com/NyW8
 
 # Disqus
-discus_identifier: mr-brown # add your discus identifier.  Not your username.  To get this, register your forum here with a unique ID: https://disqus.com/admin/create/
+discus_identifier: # add your discus identifier.  Not your username.  To get this, register your forum here with a unique ID: https://disqus.com/admin/create/
 
 # Newsletter
 mailchimp: # add your MailChimp form identifier. For example - blogenjoyfreedom.us16.list-manage.com/subscribe/post?u=cd56155d76ddeeb4c0bc4d080&amp;id=7a526cd13e
