added pages and updated layouts

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url: https://nyw8.github.io # the base hostname & protocol for your site, e.g. h
 
 # Banner settings
 video: mountains.mp4 # add banner video. Add your video file to the folder video
-banner-title: BE LIMITLESS # add banner title
+banner-title: Nyah Way # add banner title
 banner-desc: And still, I rise. - Maya Angelou
 #You cannot get through a single day without having an impact on the world around you. 
 #What you do makes a difference, and you have to decide what kind of difference you want to make. - Jane Goodall # add banner description
