Remove phone number

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ author-pic: nyah.png # your photo
 author-name: Nyah Way # your name
 about-author: Honours computer science specialist student in the entrepreneurship stream at the University of Toronto Scarborough. # about author
 email: n.way@mail.utoronto.ca # your email
-phone: N/A # your pnone number
+phone: # your pnone number
 website: https://nyw8.github.io # you website
 
 # Social link
