Update about and resume info

--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ banner-desc: And still, I rise. - Maya Angelou
 # Author settings
 author-pic: nyah.png # your photo
 author-name: Nyah Way # your name
-about-author: Honours computer science specialist student in the entrepreneurship stream at the University of Toronto Scarborough. # about author
-email: n.way@mail.utoronto.ca # your email
+about-author: Computer science specialist graduate from the University of Toronto Scarborough, now pursuing her full-time career at Google. # about author
+email: # your email
 phone: # your pnone number
 website: https://nyw8.github.io # you website
 
