--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ banner-desc: And still, I rise. - Maya Angelou
 author-pic: nyah.png # your photo
 author-name: Nyah Way # your name
 about-author: Computer science specialist graduate from the University of Toronto Scarborough, now pursuing her full-time career at Google. # about author
-email:
+email: n.way@mail.utoronto.ca
 phone:
 website: https://nyw8.github.io # you website
 
